[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycodemap"
version = "0.0.1"
description = "Build static call/import graph of a python project"
authors = [{name = "Helen Tang"}]
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["pycodemap"]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
]