[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycodemap"
version = "0.0.1"
description = "Build static call/import graph of a python project"
authors = [{name = "Helen Tang"}]
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.20.3", 
    "pygments>=2.15,<3.0"
]

[tool.pytest.ini_options]
pythonpath = ["pycodemap"]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "hypothesis>=6.90,<7.0"
]

[project.scripts]
pycodemap = "pycodemap.cli:main"